--- a/Utils.FluentValidation/Utils.FluentValidation.csproj
+++ b/Utils.FluentValidation/Utils.FluentValidation.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="7.6.0" />
+  </ItemGroup>
+
 </Project>
